# Snaplicator

./: .gitignore  .mcp.json  Makefile  README.ko.md  README.md  slot_check.sql  slot_create.sql  slot_drop.sql
backend/: README.md  pyproject.toml  requirements.txt  run.sh
backend/app/: main.py
backend/app/api/routes/: clones.py  health.py  replication.py  setup.py  snapshots.py
backend/app/core/: config.py
backend/app/services/: btrfs.py  docker_pg.py  fdw.py  preflight.py  replication.py  sql_guard.py  sync_log.py
backend/cli/: client.py  main.py
backend/cli/commands/: clones.py  replication.py  snapshots.py
backend/scripts/: retention_cleanup.py
configs/: .env.example  .env.test  anonymize-example.sql  anonymize.sql  fdw.yaml  fdw_setup.generated.sql  replication-selection.yml  replication_check.example.sql  replication_check.sql
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: Layout.tsx  LineageGraph.tsx  RetentionSelect.tsx  WhatsNew.tsx
frontend/src/lib/: utils.ts
frontend/src/routes/: App.tsx  CloneDetail.tsx  Clones.tsx  (+3 more)
mcp-server/: server.py
replication/replica-init/: 01_wait_for_db.sh  03_install_extensions.sh  05_clone_schema.sh  06_setup_fdw.sh  20_create_subscription.sh  25_start_pgstream.sh
scripts/: create-clone-from-snapshot-postgres.sh  create_main_snapshot.sh  run-first-clone-postgres.sh  run-replica-postgres.sh  run-replica-postgres17.sh  setup.sh
scripts/maintenance/: cleanup_all.sh
(+7 files in other folders)
